k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensy
  namespace: viktor-expensy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - viktor.eastus.cloudapp.azure.com
      secretName: expensy-tls
  rules:
    - host: viktor.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8706
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
